[tool.poetry]
name = "tesselitedoc"
version = "0.1.0"
description = "tesselite products documentation website"
authors = ["Marcel Ndeffo <marcel.nasser@live.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
mkdocs = "^1.2.4"
markdown-fenced-code-tabs = "^1.0.5"
markdown = "<3.4"
mkdocs-video = "^1.5.0"
mkdocs-material = "^9.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
